fix card spacing

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -65,7 +65,8 @@ h1, h2, h3, h4, h5 {
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 body {
-	margin: 2% 5%;
+    max-width: 1000px;
+    margin: 2% auto;
 }
 
 header {
@@ -89,7 +90,7 @@ nav a {
 .home-banner {
 	margin: 5%;
 	display: flex;
-	justify-content: space-evenly
+	justify-content: space-between
 }
 
 .tagline {
@@ -103,7 +104,6 @@ nav a {
 
 .tagline h1 {
 	font-size: 6em;
-	width: 50%
 }
 
 .tagline button {
